--- a/style.css
+++ b/style.css
@@ -40,13 +40,14 @@ h2 {
 }
 
 .content-info h1 {
-  font-size: 30px;
+  font-size: 64px;
   font-family: "Space Mono", monospace;
 }
 
 .content-info p {
+  width: 381px;
   margin-top: 30px;
-  font-size: 20px;
+  font-size: 24px;
   font-family: "Space Mono", monospace;
 }
 
